<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_background_dark">

    <TextView
        android:id="@+id/text_login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_title_top"
        android:layout_marginStart="@dimen/auth_screen_horizontal_padding"
        android:layout_marginEnd="@dimen/auth_screen_horizontal_padding"
        android:text="@string/login_title"
        android:textAppearance="@style/TextAppearance.Auth.HeadlineLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_inputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="@dimen/auth_screen_horizontal_padding"
        android:layout_marginEnd="@dimen/auth_screen_horizontal_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_email"
                android:textAppearance="@style/TextAppearance.Auth.TitleMedium" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/Widget.Auth.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_input_height"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/auth_spacing_lg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_password"
                android:textAppearance="@style/TextAppearance.Auth.TitleMedium" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/Widget.Auth.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_input_height"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/Widget.Auth.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_button_height"
        android:layout_marginStart="@dimen/auth_screen_horizontal_padding"
        android:layout_marginEnd="@dimen/auth_screen_horizontal_padding"
        android:backgroundTint="@color/auth_primary_green"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_inputs" />

    <LinearLayout
        android:id="@+id/layout_secondary_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login">

        <TextView
            android:id="@+id/text_action_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_action_signup"
            android:textAppearance="@style/TextAppearance.Auth.LabelSmall" />

        <TextView
            android:id="@+id/text_action_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_spacing_sm"
            android:text="@string/login_action_forgot_password"
            android:textAppearance="@style/TextAppearance.Auth.LabelSmall"
            android:textColor="@color/auth_text_accent" />
    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_divider_height"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/auth_screen_horizontal_padding"
        android:layout_marginEnd="@dimen/auth_screen_horizontal_padding"
        android:background="@color/auth_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_secondary_actions" />

    <LinearLayout
        android:id="@+id/layout_social"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_button_height"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/auth_screen_horizontal_padding"
        android:layout_marginEnd="@dimen/auth_screen_horizontal_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_vk"
            style="@style/Widget.Auth.Button.Social"
            android:layout_width="0dp"
            android:layout_height="@dimen/auth_button_height"
            android:layout_weight="1"
            android:backgroundTint="@color/auth_primary_blue"
            android:contentDescription="@string/cd_social_vk"
            android:gravity="center"
            android:text=""
            app:icon="@drawable/ic_auth_vk"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ok"
            style="@style/Widget.Auth.Button.Social"
            android:layout_width="0dp"
            android:layout_height="@dimen/auth_button_height"
            android:layout_marginStart="@dimen/auth_spacing_lg"
            android:layout_weight="1"
            android:backgroundTint="@color/auth_primary_orange_start"
            android:contentDescription="@string/cd_social_ok"
            android:gravity="center"
            android:text=""
            app:icon="@drawable/ic_auth_ok"
            app:iconGravity="textStart" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
